@@ -1,6 +1,8 @@
 /********************************************************************************
- * Copyright (c) 2008, 2009, 2011, 2013, 2016 Profactor GmbH, TU Wien ACIN, fortiss GmbH
- * 				 2020 Johannes Kepler Universiy Linz
+ * Copyright (c) 2008, 2023 Profactor GmbH, TU Wien ACIN, fortiss GmbH
+ *                          Johannes Kepler Universiy Linz
+ *                          Primetals Technologies Austria GmbH
+ *                          Martin Erich Jobst
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -12,32 +14,47 @@
  *  Gerhard Ebenhofer, Alois Zoitl
  *    - initial API and implementation and/or initial documentation
  *  Alois Zoitl - Changed to a per project Type and Data TypeLibrary
+ *  Martin Melik-Merkumians - Changes to reflect returned List instead of array
+ *  Martin Jobst - Separate error marker data types into a distinct map
  ********************************************************************************/
 package org.eclipse.fordiac.ide.model.typelibrary;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.text.MessageFormat;
+import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.stream.Stream;
 
-import org.eclipse.fordiac.ide.model.Activator;
-import org.eclipse.fordiac.ide.model.FordiacKeywords;
+import org.eclipse.emf.common.util.URI;
+import org.eclipse.emf.ecore.resource.impl.ResourceImpl;
+import org.eclipse.fordiac.ide.model.Messages;
 import org.eclipse.fordiac.ide.model.NamedElementComparator;
-import org.eclipse.fordiac.ide.model.Palette.DataTypePaletteEntry;
+import org.eclipse.fordiac.ide.model.data.AnyStringType;
 import org.eclipse.fordiac.ide.model.data.DataFactory;
 import org.eclipse.fordiac.ide.model.data.DataType;
 import org.eclipse.fordiac.ide.model.data.StructuredType;
+import org.eclipse.fordiac.ide.model.datatype.helper.IecTypes;
 import org.eclipse.fordiac.ide.model.datatype.helper.IecTypes.ElementaryTypes;
 import org.eclipse.fordiac.ide.model.datatype.helper.IecTypes.GenericTypes;
+import org.eclipse.fordiac.ide.model.helpers.PackageNameHelper;
+import org.eclipse.fordiac.ide.model.libraryElement.ErrorMarkerDataType;
+import org.eclipse.fordiac.ide.model.libraryElement.LibraryElementFactory;
+import org.eclipse.fordiac.ide.model.typelibrary.impl.ErrorDataTypeEntryImpl;
+import org.eclipse.fordiac.ide.ui.FordiacLogHelper;
 
 public final class DataTypeLibrary {
 
-	private final Map<String, DataType> typeMap = new HashMap<>();
-	private final Map<String, DataTypePaletteEntry> derivedTypeMap = new HashMap<>();
+	private static final Pattern STRING_MAX_LENGTH_PATTERN = Pattern.compile("(W?STRING)\\[(\\d+)\\]", //$NON-NLS-1$
+			Pattern.CASE_INSENSITIVE);
+
+	private final Map<String, DataType> typeMap = new ConcurrentHashMap<>();
+	private final Map<String, DataTypeEntry> derivedTypes = new ConcurrentHashMap<>();
+	private final Map<String, ErrorDataTypeEntry> errorTypes = new ConcurrentHashMap<>();
 
 	/** Instantiates a new data type library. */
 	public DataTypeLibrary() {
@@ -45,111 +62,172 @@ public final class DataTypeLibrary {
 		initGenericTypes();
 	}
 
-
-	public void addPaletteEntry(final DataTypePaletteEntry entry) {
-		derivedTypeMap.put(entry.getLabel(), entry);
+	public boolean addTypeEntry(final DataTypeEntry entry) {
+		final String uppercaseName = entry.getFullTypeName().toUpperCase();
+		removeErrorTypeEntry(uppercaseName); // remove stale error marker data type
+		return derivedTypes.putIfAbsent(uppercaseName, entry) == null;
 	}
 
-	public void removePaletteEntry(final DataTypePaletteEntry entry) {
-		derivedTypeMap.remove(entry.getLabel());
+	public void removeTypeEntry(final DataTypeEntry entry) {
+		derivedTypes.remove(entry.getFullTypeName().toUpperCase(), entry);
+	}
+
+	private void removeErrorTypeEntry(final String uppercaseName) {
+		final ErrorDataTypeEntry entry = errorTypes.remove(uppercaseName);
+		if (entry != null) {
+			entry.setTypeLibrary(null); // trigger transitive refresh
+		}
+	}
+
+	private void addToTypeMap(final DataType type) {
+		typeMap.putIfAbsent(type.getName().toUpperCase(), type);
 	}
 
 	/** Inits the elementary types. */
 	private void initElementaryTypes() {
-		Arrays.asList(ElementaryTypes.getAllElementaryType()).forEach(type -> typeMap.put(type.getName(), type));
+		ElementaryTypes.getAllElementaryType().forEach(this::addToTypeMap);
 	}
 
 	private void initGenericTypes() {
-		Arrays.asList(GenericTypes.getAllGenericTypes()).forEach(type -> typeMap.put(type.getName(), type));
+		GenericTypes.getAllGenericTypes().forEach(this::addToTypeMap);
 	}
 
-	public Map<String, DataTypePaletteEntry> getDerivedDataTypes() {
-		return derivedTypeMap;
+	public Collection<DataTypeEntry> getDerivedDataTypes() {
+		return Collections.unmodifiableCollection(derivedTypes.values());
 	}
 
-	/** Gets the data types.
+	/**
+	 * Gets the data types.
 	 *
-	 * @return the data types */
+	 * @return the data types
+	 */
 	public List<DataType> getDataTypes() {
-		final List<DataType> dataTypes = new ArrayList<>(typeMap.size() + derivedTypeMap.size());
-		dataTypes.addAll(typeMap.values());
-		dataTypes.addAll(derivedTypeMap.values().stream().map(DataTypePaletteEntry::getType).filter(Objects::nonNull)
-				.collect(Collectors.toList()));
-		return dataTypes;
+		return Stream.concat(typeMap.values().stream(),
+				derivedTypes.values().stream().map(DataTypeEntry::getType).filter(Objects::nonNull)).toList();
 	}
 
-	/** Gets the data types sorted alphabetically from a to z.
+	public static List<DataType> getNonUserDefinedDataTypes() {
+		return IecTypes.ElementaryTypes.getAllElementaryType();
+	}
+
+	/**
+	 * Gets the data types sorted alphabetically from a to z.
 	 *
-	 * @return the sorted data types list */
+	 * @return the sorted data types list
+	 */
 	public List<DataType> getDataTypesSorted() {
-		final List<DataType> dataTypes = getDataTypes();
-		Collections.sort(dataTypes, NamedElementComparator.INSTANCE);
-		return dataTypes;
+		return getDataTypes().stream().sorted(NamedElementComparator.INSTANCE).toList();
 	}
 
-	/** FIXME only return type if it really exists!
+	/**
+	 * get type
 	 *
 	 * @param name the name
 	 *
-	 * @return the type */
+	 * @return the type or ErrorMarker
+	 */
 	public DataType getType(final String name) {
 		if (null == name) {
-			return typeMap.get("ANY"); //$NON-NLS-1$
+			return GenericTypes.ANY;
 		}
-		DataType type = typeMap.get(name);
+		final String uppercaseName = name.toUpperCase();
+		DataType type = typeMap.get(uppercaseName);
+		if (type != null) {
+			return type;
+		}
 
-		if (null == type) {
-			type = getDerivedType(name);
-			if (null == type) {
-				// TODO reconsider if in this case a new type should be created
-				Activator.getDefault().logInfo("Missing Datatype: " + name); //$NON-NLS-1$
-				type = DataFactory.eINSTANCE.createElementaryType();
-				type.setName(name);
-				typeMap.put(name, type);
-			}
+		type = getDerivedType(uppercaseName);
+		if (type != null) {
+			return type;
 		}
-		return type;
+
+		type = createParametricType(name);
+		if (type != null) {
+			return type;
+		}
+
+		return createErrorMarkerType(name, MessageFormat.format(Messages.DataTypeLibrary_MissingDatatype, name));
 	}
 
 	public DataType getTypeIfExists(final String name) {
-
-		final DataType dataType = typeMap.get(name.toUpperCase());
+		final String uppercaseName = name.toUpperCase();
+		final DataType dataType = typeMap.get(uppercaseName);
 		if (dataType != null) {
 			return dataType;
 		}
-
-		return getDerivedType(name);
+		return getDerivedType(uppercaseName);
 	}
 
 	public List<StructuredType> getStructuredTypes() {
-		final List<StructuredType> types = getDerivedDataTypes().entrySet().stream()
-				.filter(entry -> (entry.getValue().getType() instanceof StructuredType))
-				.map(entry -> ((StructuredType) entry.getValue().getType())).collect(Collectors.toList());
-		types.add((StructuredType) getType(FordiacKeywords.ANY_STRUCT));
-		return types;
+		return Stream.concat(Stream.of(GenericTypes.ANY_STRUCT), derivedTypes.values().stream().map(TypeEntry::getType)
+				.filter(StructuredType.class::isInstance).map(StructuredType.class::cast)).toList();
 	}
 
 	public List<StructuredType> getStructuredTypesSorted() {
-		final List<StructuredType> structTypes = getStructuredTypes();
-		Collections.sort(structTypes, NamedElementComparator.INSTANCE);
-		return structTypes;
+		return getStructuredTypes().stream().sorted(NamedElementComparator.INSTANCE).toList();
 	}
 
-	private DataType getDerivedType(final String name) {
-		final DataTypePaletteEntry entry = derivedTypeMap.get(name);
+	private DataType getDerivedType(final String uppercaseName) {
+		final DataTypeEntry entry = derivedTypes.get(uppercaseName);
 		if (null != entry) {
 			return entry.getType();
 		}
 		return null;
 	}
 
-	public StructuredType getStructuredType(final String name) {
-		final DataType derivedType = getDerivedType(name);
-		if (derivedType instanceof StructuredType) {
-			return (StructuredType) derivedType;
-		}
-		return (StructuredType) typeMap.get(FordiacKeywords.ANY_STRUCT);
-
+	public DataTypeEntry getDerivedTypeEntry(final String name) {
+		return derivedTypes.get(name.toUpperCase());
 	}
 
+	private DataType createParametricType(final String typeName) {
+		final Matcher matcher = STRING_MAX_LENGTH_PATTERN.matcher(typeName);
+		if (matcher.matches()) {
+			try {
+				final String plainTypeName = matcher.group(1);
+				final String maxLengthString = matcher.group(2);
+				final DataType plainType = typeMap.get(plainTypeName.toUpperCase());
+				if (plainType instanceof AnyStringType) {
+					final int maxLength = Integer.parseUnsignedInt(maxLengthString);
+					return typeMap.computeIfAbsent(typeName.toUpperCase(), name -> {
+						final AnyStringType type = (AnyStringType) DataFactory.eINSTANCE.create(plainType.eClass());
+						type.setName(name);
+						type.setMaxLength(maxLength);
+						encloseInResource(type);
+						return type;
+					});
+				}
+			} catch (final NumberFormatException e) {
+				return createErrorMarkerType(typeName,
+						MessageFormat.format(Messages.DataTypeLibrary_InvalidMaxLengthInStringType, typeName));
+			}
+		}
+		return null;
+	}
+
+	public ErrorMarkerDataType createErrorMarkerType(final String typeName, final String message) {
+		return errorTypes.computeIfAbsent(typeName.toUpperCase(), name -> {
+			FordiacLogHelper.logInfo(message);
+			final ErrorMarkerDataType type = LibraryElementFactory.eINSTANCE.createErrorMarkerDataType();
+			PackageNameHelper.setFullTypeName(type, typeName);
+			final ErrorDataTypeEntry entry = new ErrorDataTypeEntryImpl();
+			entry.setType(type);
+			return entry;
+		}).getType();
+	}
+
+	private static void encloseInResource(final DataType type) {
+		new ResourceImpl(URI.createFileURI(type.getName() + ".datalib.dtp")).getContents().add(type); //$NON-NLS-1$
+	}
+
+	public StructuredType getStructuredType(final String name) {
+		final DataType derivedType = getDerivedType(name.toUpperCase());
+		if (derivedType instanceof final StructuredType structuredType) {
+			return structuredType;
+		}
+		return GenericTypes.ANY_STRUCT;
+	}
+
+	void clear() {
+		derivedTypes.clear();
+	}
 }
